# crudite

./: Cargo.toml  readme.md
benches/: long_string.rs
src/: crdt.rs  doc.rs  document.rs  json.rs  lib.rs  opset.rs  tree.rs
src/json/: sequence.rs  test.rs  tree.rs  value.rs
src/tree/: sequence.rs  test.rs
