[package]
name = "crudite"
version = "0.1.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2018"
license = "mit"
description = "A JSON CRDT"
repository = "https://github.com/lord/crudite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.7"
serde = { version = "1.0", features = ["derive"] }
im = "13.0"
