[package]
name = "crudite"
version = "0.1.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2018"
license = "MIT"
description = "A JSON CRDT"
repository = "https://github.com/lord/crudite"

[lib]
bench = false

[dependencies]
uuid = "0.7"
serde = { version = "1.0", features = ["derive"] }
im = "13.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "long_string"
harness = false
